--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             gender, etc, very quickly. It contains over 1,360 symptoms and 740
             conditions.
           </p>
-          <a href="#" class="btn">Try It Yourself</a>
+          <a href="./bot.html" class="btn">Try It Yourself</a>
         </div>
       </section>
     </div>
